k8s/spinnaker-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoservice-svc
  namespace: dev
  labels:
    app: demoservice
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: demoservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoservice
    version: demoservice-${ parameters.routepath }
  name: demoservice-${ parameters.routepath }
  namespace: '${ parameters.namespace }'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoservice
  template:
    metadata:
      labels:
        app: demoservice
    spec:
      containers:
      - name: demoservice
        image: 'airwavetechio/demoservice:${ parameters.dockertag }'
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
            name: liveness-port
        resources:
          limits:
            cpu: 10m
            memory: 25Mi
          requests:
            cpu: 10m
            memory: 25Mi
      restartPolicy: Always
